/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.provision;

option java_package = "com.dremio.provision";
option optimize_for = SPEED;

option java_outer_classname = "ProvisioningCommonProtobuf";

enum ClusterState {
  CREATED = 1;
  STARTING = 2;
  RUNNING = 3;
  STOPPING = 4;
  STOPPED = 5;
  FAILED = 6;
  DELETED = 7;
}

enum ClusterDesiredState {
  // this state indicates that while cluster is stopping it should be eventually deleted
  DELETED = 1;
  // this state indicates that cluster is restarting and needs to get into RUNNING state
  RUNNING = 2;
  STOPPED = 3;
}
// unique id
message ClusterId {
  required string id = 1;
}

// type of cluster
enum ClusterType {
  YARN = 1;
  MESOS = 2;
  EC2 = 3;
  KUBERNETES = 4;
  GCE = 5;
  AZURE = 6;
}

// type of distro
enum DistroType {
  OTHER = 1;
  APACHE = 2;
  CDH = 3;
  HDP = 4;
  MAPR = 5;
}

// type of property: Java Property, Java System Property, Environment Variable
enum PropertyType {
  JAVA_PROP = 1;
  SYSTEM_PROP = 2;
  ENV_VAR = 3;
}

message Property {
  required string key = 1;
  required string value = 2;
  optional PropertyType type = 3;
}

enum PreviewEngineState {
  UNKNOWN = 1;
  RUNNING = 2;
  STOPPED = 3;
}
